- added product list the product list still uses placeholder data..
NEEDS A LOT OF CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="example-app-name">General store</h1>
     <span class="example-spacer"></span>
+    <i class="material-icons">account_circle</i>
     <a href="#">
     <mat-icon class="example-icon">shopping_cart</mat-icon>
     </a>
@@ -21,4 +22,13 @@
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
+
+  <mat-toolbar color='primary'>
+    <span class='spacer'></span>
+    <h3>Wim van der Putten - s1102262</h3>
+    <span class='spacer'></span>
+  </mat-toolbar>
 </div>
+
+
+
