--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,11 +20,18 @@
 h1.example-app-name {
   margin-left: 8px;
 }
-
+.spacer {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+}
 .example-sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
   flex: 1;
+}
+mat-sidenav-content{
+  padding: 40px;
 }
 
 .example-is-mobile .example-sidenav-container {
