yeah added alot of things ;)

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,16 @@
-<p>
-  login works!
-</p>
+<div class="login-form" >
+
+  <form (ngSubmit)="onSubmit()" #loginForm="ngForm" >
+  <mat-card class="login-card">
+    <mat-form-field>
+      <input matInput placeholder="Username"   [(ngModel)]="user.username" name="username">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'" [(ngModel)]="user.password" name="password" >
+      <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+    </mat-form-field>
+    <mat-checkbox [(ngModel)]="remember" name="remember">Check me!</mat-checkbox>
+    <button mat-raised-button class="product-button" type="submit">Basic</button>
+  </mat-card>
+</form>
+</div>
