--- a/src/app/products/product-list/product-list.component.css
+++ b/src/app/products/product-list/product-list.component.css
@@ -14,3 +14,17 @@ mat-grid-tile {
 .example-header-image {
   background-size: cover;
 }
+
+
+.product-button{
+  max-width: 400px;
+  width: 100%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+.action-card{
+  text-align: center;
+}
