--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="example-app-name">General store</h1>
     <span class="example-spacer"></span>
-    <i class="material-icons">account_circle</i>
-    <a href="#">
+    <a routerLink="cart">
     <mat-icon class="example-icon">shopping_cart</mat-icon>
     </a>
   </mat-toolbar>
+
 
   <mat-sidenav-container class="example-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
