--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,17 @@
-<p>
-  cart works!
-</p>
+<div class="login-form" >
+
+
+    <mat-card class="login-card">
+      <mat-list>
+        <h3 mat-subheader>Shopping cart</h3>
+
+        <mat-list-item *ngFor="let product of cartList">
+          <mat-icon mat-list-icon>label</mat-icon>
+          <h4 mat-line>{{product.title}}</h4>
+          <p mat-line> {{product.brand}} </p>
+        </mat-list-item>
+      </mat-list>
+
+    </mat-card>
+
+</div>
