--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,61 +1,33 @@
 <mat-grid-list cols="2" rowHeight="800px" >
 
-
-
-
   <mat-grid-tile *ngFor="let product of productList">
 
     <mat-card class="example-card">
       <mat-card-header class="header-card">
-        <img mat-card-avatar class="example-header-image" src={{product.thumbnailUrl}}>
+
         <mat-card-title>{{product.title}}</mat-card-title>
-        <mat-card-subtitle>Subtitle</mat-card-subtitle>
+        <mat-card-subtitle>{{product.brand}}</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src={{product.url}} alt={{product.title}}>
+      <img mat-card-image src="../../../assets/images/{{product.image}}" alt={{product.title}}>
       <mat-card-content>
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
+        {{product.description}}
         </p>
       </mat-card-content>
-      <mat-card-actions>
-        <mat-form-field class="example-full-width">
-          <input type="number" matInput placeholder="Amount" value="Sushi">
-        </mat-form-field>
-        <button mat-button>Add to cart</button>
-      </mat-card-actions>
-    </mat-card>
-
-
-
-
-  </mat-grid-tile>
+      <mat-card-actions class="action-card">
 <!---
-  <mat-grid-tile>
-      <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
+        <mat-form-field class="example-full-width">
+          <input type="number" matInput placeholder="Amount"  name="amount" >
+        </mat-form-field>
+-->
+        <button mat-button class="product-button" (click)="addToCart(product.id, amount)">Add to cart</button>
       </mat-card-actions>
     </mat-card>
+
+
+
   </mat-grid-tile>
 
-
--->
 
 </mat-grid-list>
 
