changed some css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,11 +23,16 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 
-  <mat-toolbar color='primary'>
-    <span class='spacer'></span>
-    <h3>Wim van der Putten - s1102262</h3>
-    <span class='spacer'></span>
-  </mat-toolbar>
+  <footer>
+    <div layout="row" layout-align="center center">
+      <mat-toolbar color='primary'>
+        <span class='spacer'></span>
+        <h3>Wim van der Putten - s1102262</h3>
+        <span class='spacer'></span>
+      </mat-toolbar>
+    </div>
+  </footer>
+
 </div>
 
 
