--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,6 +1,6 @@
-<mat-grid-list cols="2" rowHeight="800px" >
+<mat-grid-list  ngClass="product-list" class="product-list" cols="1" rowHeight="900">
 
-  <mat-grid-tile *ngFor="let product of productList">
+  <mat-grid-tile class="grid-tile" *ngFor="let product of productList">
 
     <mat-card class="example-card">
       <mat-card-header class="header-card">
