--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,11 @@
 .login-card {
-  max-width: 400px;
   max-height: 100%;
+  text-align: center;
+}
+.login-form{
+  margin: auto;
+  width: 100%;
+  border: 3px solid green;
+  padding: 10px;
+  text-align: center;
 }
