--- a/src/app/products/product-list/product-list.component.css
+++ b/src/app/products/product-list/product-list.component.css
@@ -1,15 +1,22 @@
-mat-grid-tile {
-  background: lightblue;
-}
 .example-card {
   max-width: 400px;
   max-height: 100%;
+  height: 800px;
+
 }
+.grid-tile{
+height: 810px;
+text-align:center;
+}
+.product-list{
+
+ }
+
 .header-card {
   height: 60px;
 }
 .mat-card-image {
-
+height: 600px;
 }
 .example-header-image {
   background-size: cover;
@@ -17,13 +24,13 @@ mat-grid-tile {
 
 
 .product-button{
-  max-width: 400px;
   width: 100%;
   border: 3px solid #73AD21;
-  padding: 10px;
 
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 17px;
+  text-align: center;
 }
 .action-card{
   text-align: center;
