complete overhaul of the css and fixed some minor bugs

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,41 +1,33 @@
-.example-container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.mat-toolbar.mat-primary{
+  background: royalblue;
 }
-
-.example-is-mobile .example-toolbar {
-  position: fixed;
-  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-  z-index: 2;
-}
-
 .example-spacer {
   flex: 1 1 auto;
 }
-h1.example-app-name {
-  margin-left: 8px;
+.example-icon{
+  cursor: pointer;
 }
-.spacer {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
+.side-content{
+  min-height: 300px;
 }
-.example-sidenav-container {
-  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  flex: 1;
+.example-sidenav-container{
+  min-height: 570px;
 }
-mat-sidenav-content{
-  padding: 40px;
+@media (min-height: 600px) {
+  .example-sidenav-container{
+    min-height: 670px;
+  }
+
+}
+@media (min-height: 700px) {
+  .example-sidenav-container {
+    min-height: 770px;
+  }
+}
+@media (min-height: 800px) {
+  .example-sidenav-container {
+    min-height: 870px;
+  }
 }
 
-.example-is-mobile .example-sidenav-container {
-  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
-     `<body>` to be our scrolling element for mobile layouts. */
-  flex: 1 0 auto;
-}
+
