--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="example-app-name">General store</h1>
     <span class="example-spacer"></span>
-    <a routerLink="cart">
-    <mat-icon class="example-icon">shopping_cart</mat-icon>
-    </a>
+
+    <mat-icon class="example-icon" (click)="goToCart()">shopping_cart</mat-icon>
+
   </mat-toolbar>
 
 
@@ -18,23 +18,13 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content>
+    <mat-sidenav-content class="side-content">
+
       <router-outlet></router-outlet>
+
     </mat-sidenav-content>
   </mat-sidenav-container>
 
-
-  <!--
-  <footer>
-    <div layout="row" layout-align="center center">
-      <mat-toolbar color='primary'>
-        <span class='spacer'></span>
-        <h3>Wim van der Putten - s1102262</h3>
-        <span class='spacer'></span>
-      </mat-toolbar>
-    </div>
-  </footer>
--->
 </div>
 
 
