--- a/src/app/products/product-list/product-list.component.css
+++ b/src/app/products/product-list/product-list.component.css
@@ -1,37 +1,52 @@
-.example-card {
-  max-width: 400px;
-  max-height: 100%;
-  height: 800px;
-
-}
-.grid-tile{
-height: 810px;
-text-align:center;
-}
-.product-list{
-
- }
-
-.header-card {
-  height: 60px;
-}
-.mat-card-image {
-height: 600px;
-}
-.example-header-image {
-  background-size: cover;
+:root {
+  --jumbotron-padding-y: 300rem;
 }
 
+.jumbotron {
+  padding-top: var(--jumbotron-padding-y);
+  padding-bottom: var(--jumbotron-padding-y);
+  margin-bottom: 0;
+  background-color: #fff;
+}
+@media (min-width: 768px) {
+  .jumbotron {
+    padding-top: calc(var(--jumbotron-padding-y) * 2);
+    padding-bottom: calc(var(--jumbotron-padding-y) * 2);
+  }
+}
 
-.product-button{
+.jumbotron p:last-child {
+  margin-bottom: 0;
+}
+
+.jumbotron-heading {
+  font-weight: 300;
+}
+
+.jumbotron .container {
+  max-width: 40rem;
+}
+
+footer {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+footer p {
+  margin-bottom: .25rem;
+}
+
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .1); }
+
+.album{
+  padding: 100px 0px 100px 0px;
+}
+.col-md-4{
+  margin-bottom: 24px;
+  height: 622px;
+}
+.card-img-top{
+  height: 430px;
   width: 100%;
-  border: 3px solid #73AD21;
-
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 17px;
-  text-align: center;
-}
-.action-card{
-  text-align: center;
+  display: block;
 }
