--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+.example-toolbar {
+  background: blue;
+}
+.mat-toolbar.mat-primary{
+  background: blue;
+}
+
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+  background-color: #fafafa;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+.bar-fixer{
+  max-width: 85%;
+}
